[gd_scene load_steps=32 format=3 uid="uid://t0ynn7qahxa3"]

[ext_resource type="Script" uid="uid://ddcrmbr6tvvh2" path="res://levels/endless_level.gd" id="1_lhpit"]
[ext_resource type="Texture2D" uid="uid://dxcmrshjxkgjk" path="res://assets/table front.png" id="2_56i3n"]
[ext_resource type="Script" uid="uid://b3t2d1rtlp32f" path="res://resources/item_stack.gd" id="2_s12x1"]
[ext_resource type="Texture2D" uid="uid://b5f7roo05aq48" path="res://assets/table base.png" id="3_30fi4"]
[ext_resource type="Script" uid="uid://drjgkm8r1ypcg" path="res://items/basic_item.gd" id="3_t5b7q"]
[ext_resource type="Resource" uid="uid://dxgdjwptdx0cn" path="res://items/blue_knife.tres" id="4_4pavo"]
[ext_resource type="Texture2D" uid="uid://07t0yhbsmgo2" path="res://Backgrounds/background2.png" id="4_jl55b"]
[ext_resource type="Resource" uid="uid://b6wciwk4136me" path="res://items/blue_potion.tres" id="5_ehhrl"]
[ext_resource type="PackedScene" uid="uid://buc2wf64kxubv" path="res://menus/LevelFinishUI/LevelFinishUI.tscn" id="5_hynkl"]
[ext_resource type="Resource" uid="uid://bc2wyf85lloq4" path="res://items/red_mace.tres" id="6_4pavo"]
[ext_resource type="Resource" uid="uid://bk441h6n8vgyd" path="res://items/trash.tres" id="6_ehhrl"]
[ext_resource type="Resource" uid="uid://cdxtiijwx4pfu" path="res://items/red_potion.tres" id="7_ehhrl"]
[ext_resource type="Script" uid="uid://5vfpq1c3oeq8" path="res://effects/item_effects/basic_effect.gd" id="9_mwh2e"]
[ext_resource type="Resource" uid="uid://bgxys31xdw6vm" path="res://effects/item_effects/confusion_on_active.tres" id="10_brc3a"]
[ext_resource type="Texture2D" uid="uid://bu85ibb8evsbm" path="res://assets/red potion.png" id="11_mh2i3"]
[ext_resource type="Texture2D" uid="uid://cpl3twwukqr3v" path="res://assets/blue knife.png" id="12_mh2i3"]
[ext_resource type="Texture2D" uid="uid://dhbnva0sv6wv3" path="res://assets/red mace.png" id="13_tcot8"]
[ext_resource type="Texture2D" uid="uid://bp4wjd31mnu8b" path="res://assets/blue potion.png" id="14_tcot8"]
[ext_resource type="PackedScene" uid="uid://bsl7r4j1kwnq4" path="res://menus/timer/timer.tscn" id="19_2dkhr"]

[sub_resource type="Resource" id="Resource_xsc4g"]
script = ExtResource("2_s12x1")
item_stack = Array[ExtResource("3_t5b7q")]([ExtResource("4_4pavo"), ExtResource("4_4pavo"), ExtResource("5_ehhrl"), ExtResource("5_ehhrl"), ExtResource("6_ehhrl"), ExtResource("6_ehhrl")])
randomized_order = true
metadata/_custom_type_script = "uid://b3t2d1rtlp32f"

[sub_resource type="Resource" id="Resource_dd6q0"]
script = ExtResource("2_s12x1")
item_stack = Array[ExtResource("3_t5b7q")]([ExtResource("6_4pavo"), ExtResource("6_4pavo"), ExtResource("7_ehhrl"), ExtResource("7_ehhrl"), ExtResource("6_ehhrl"), ExtResource("6_ehhrl")])
metadata/_custom_type_script = "uid://b3t2d1rtlp32f"

[sub_resource type="Resource" id="Resource_ehhrl"]
script = ExtResource("2_s12x1")
item_stack = Array[ExtResource("3_t5b7q")]([ExtResource("4_4pavo"), ExtResource("5_ehhrl"), ExtResource("6_4pavo"), ExtResource("7_ehhrl"), ExtResource("6_ehhrl"), ExtResource("6_ehhrl")])
randomized_order = true
metadata/_custom_type_script = "uid://b3t2d1rtlp32f"

[sub_resource type="Resource" id="Resource_tcot8"]
resource_local_to_scene = true
script = ExtResource("3_t5b7q")
attributes = Array[int]([4, 6])
effects = Array[ExtResource("9_mwh2e")]([ExtResource("10_brc3a")])
sprite = ExtResource("11_mh2i3")
metadata/_custom_type_script = "uid://drjgkm8r1ypcg"

[sub_resource type="Resource" id="Resource_mwh2e"]
script = ExtResource("2_s12x1")
item_stack = Array[ExtResource("3_t5b7q")]([ExtResource("5_ehhrl"), ExtResource("5_ehhrl"), ExtResource("6_ehhrl"), SubResource("Resource_tcot8"), ExtResource("7_ehhrl")])
randomized_order = true
metadata/_custom_type_script = "uid://b3t2d1rtlp32f"

[sub_resource type="Resource" id="Resource_2dkhr"]
resource_local_to_scene = true
script = ExtResource("3_t5b7q")
attributes = Array[int]([0, 5, 3])
effects = Array[ExtResource("9_mwh2e")]([ExtResource("10_brc3a")])
sprite = ExtResource("12_mh2i3")
metadata/_custom_type_script = "uid://drjgkm8r1ypcg"

[sub_resource type="Resource" id="Resource_tk63e"]
resource_local_to_scene = true
script = ExtResource("3_t5b7q")
attributes = Array[int]([0, 5, 3])
effects = Array[ExtResource("9_mwh2e")]([ExtResource("10_brc3a")])
sprite = ExtResource("12_mh2i3")
metadata/_custom_type_script = "uid://drjgkm8r1ypcg"

[sub_resource type="Resource" id="Resource_2xcmh"]
resource_local_to_scene = true
script = ExtResource("3_t5b7q")
attributes = Array[int]([1, 6, 3])
effects = Array[ExtResource("9_mwh2e")]([ExtResource("10_brc3a")])
sprite = ExtResource("13_tcot8")
metadata/_custom_type_script = "uid://drjgkm8r1ypcg"

[sub_resource type="Resource" id="Resource_jghei"]
resource_local_to_scene = true
script = ExtResource("3_t5b7q")
attributes = Array[int]([1, 6, 3])
effects = Array[ExtResource("9_mwh2e")]([ExtResource("10_brc3a")])
sprite = ExtResource("13_tcot8")
metadata/_custom_type_script = "uid://drjgkm8r1ypcg"

[sub_resource type="Resource" id="Resource_brc3a"]
script = ExtResource("2_s12x1")
item_stack = Array[ExtResource("3_t5b7q")]([SubResource("Resource_2dkhr"), SubResource("Resource_tk63e"), SubResource("Resource_2xcmh"), SubResource("Resource_jghei"), ExtResource("6_ehhrl")])
randomized_order = true
metadata/_custom_type_script = "uid://b3t2d1rtlp32f"

[sub_resource type="Resource" id="Resource_86nyt"]
resource_local_to_scene = true
script = ExtResource("3_t5b7q")
attributes = Array[int]([4, 5])
effects = Array[ExtResource("9_mwh2e")]([ExtResource("10_brc3a")])
sprite = ExtResource("14_tcot8")
metadata/_custom_type_script = "uid://drjgkm8r1ypcg"

[sub_resource type="Resource" id="Resource_s6t3s"]
script = ExtResource("2_s12x1")
item_stack = Array[ExtResource("3_t5b7q")]([SubResource("Resource_86nyt"), ExtResource("5_ehhrl"), ExtResource("7_ehhrl"), ExtResource("7_ehhrl"), ExtResource("6_ehhrl")])
metadata/_custom_type_script = "uid://b3t2d1rtlp32f"

[node name="Level" type="Node2D" node_paths=PackedStringArray("level_timer")]
script = ExtResource("1_lhpit")
level_time = 20.0
level_timer = NodePath("LevelTimer")
stacks = Array[ExtResource("2_s12x1")]([SubResource("Resource_xsc4g"), SubResource("Resource_dd6q0"), SubResource("Resource_ehhrl"), SubResource("Resource_mwh2e"), SubResource("Resource_brc3a"), SubResource("Resource_s6t3s")])

[node name="LevelTimer" type="Timer" parent="."]

[node name="ItemStack" type="Node2D" parent="."]
position = Vector2(-1, 400)

[node name="LeftStack" type="Node2D" parent="."]
position = Vector2(-430, 300)

[node name="RightStack" type="Node2D" parent="."]
position = Vector2(431, 300)

[node name="Camera2D" type="Camera2D" parent="."]

[node name="InstantiatedItems" type="Node" parent="."]

[node name="TableFront" type="Sprite2D" parent="."]
top_level = true
position = Vector2(4.5, 394.5)
texture = ExtResource("2_56i3n")

[node name="TableBase" type="Sprite2D" parent="."]
position = Vector2(4.5, 394.5)
texture = ExtResource("3_30fi4")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
follow_viewport_enabled = true

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground"]
texture = ExtResource("4_jl55b")

[node name="LevelFinishUI" parent="." instance=ExtResource("5_hynkl")]

[node name="Timer" parent="." node_paths=PackedStringArray("timer") instance=ExtResource("19_2dkhr")]
position = Vector2(662, -407)
timer = NodePath("../LevelTimer")

[connection signal="level_complete" from="." to="LevelFinishUI" method="_on_level_1_level_complete"]
[connection signal="level_one_complete" from="LevelFinishUI" to="LevelFinishUI" method="_on_level_one_complete"]
